part-1/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
spec:
  rules:
    - http:
        paths:
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: ping-pong-svc
                port:
                  number: 2345
          - path: /logoutput
            pathType: Prefix
            backend:
              service:
                name: log-output-svc
                port:
                  number: 2345
